--- a/J_AND_M/J_AND_M/UI/master/master.Master
+++ b/J_AND_M/J_AND_M/UI/master/master.Master
@@ -171,7 +171,7 @@ body{
                 <div class="col-lg-2 col-md-3">
                     <div class="header__logo">
                         <a href="./index.html">
-                            <img src="img/logo.png" alt=""></a>
+                            <img src="https://drive.google.com/file/d/1iM736m6nzk5SmdA55Zmg6mGbVKIIyCzh/view?usp=sharing"></a>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
