--- a/J_AND_M/J_AND_M/UI/master/master.Master
+++ b/J_AND_M/J_AND_M/UI/master/master.Master
@@ -207,13 +207,16 @@ body{
 
     </asp:ContentPlaceHolder>
 
+
+
+
     <!-- Search End -->
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.10/dist/sweetalert2.all.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.10/dist/sweetalert2.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
     <!-- wsp button -->
-    <a href="https://wa.me/50686321956" style="position: fixed; z-index: 100; color: black; height: 179px; top: 152px; left: 23px;"
+    <a href="https://wa.me/50686321956" style="position: fixed; z-index: 100; color: black; height: 179px; bottom: -63px; right: 23px;"
         target="_blank">Contactar al distribuidor</a>
     <a href="https://wa.me/50686321956" class="wsp" target="_blank"><i class="fa fa-whatsapp"></i></a>
             <!-- Js Plugins -->
@@ -231,6 +234,25 @@ body{
 </body>
 
 <script>
+    $(document).ready(() => {
+        var elements = document.getElementsByTagName('div');
+
+        for (var i = 0; i < elements.length; i++) {
+            console.log(elements[i].innerText)
+            if (elements[i].innerText.includes("Hosted Windows Virtual Server. 2.5GHz CPU, 2GB RAM, 60GB SSD. Try it now for $1")) {
+                elements[i].style.visibility = "hidden";
+                elements[i - 1].style.visibility = "hidden";
+            }
+        }
+        elements = document.getElementsByTagName('a');
+
+        for (var i = 0; i < elements.length; i++) {
+            if (elements[i].innerText.includes("Web hosting by")) {
+                elements[i].style.visibility = "hidden";
+            }
+        }
+    })
+
     if (localStorage.getItem('Usuario') == "1") {
         document.getElementById("divMantenimientos").style.visibility = "visible";
         document.getElementById("divMantenimientos2").style.visibility = "visible";
